--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,18 @@ packages = [{include = "mhealth_feature_generation"}]
 python = "^3.11"
 jupyter = "^1.0.0"
 pandas = "^1.5.1"
-matplotlib = "^3.7.1"
-seaborn = "^0.12.2"
-altair = "^5.0.0"
 numpy = "^1.24.3"
-black = "^23.3.0"
 tqdm = "^4.65.0"
-autopep8 = "^2.0.2"
+shap = "^0.42.1"
+llvmlite = "^0.40.1"
+numba = "^0.57.1"
 
 
 [tool.poetry.group.dev.dependencies]
-mhealth-anomaly-detection = {path = "/Users/sakre/Code/dgc/mhealth_anomaly_detection"}
+black = "^23.3.0"
+seaborn = "^0.12.2"
+matplotlib = "^3.7.1"
+autopep8 = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core"]
