--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ black = "^23.3.0"
 seaborn = "^0.12.2"
 matplotlib = "^3.7.1"
 autopep8 = "^2.0.2"
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core"]
