--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pingouin = "^0.5.3"
 openpyxl = "^3.1.2"
 numpy = "^1.26.0"
 pandas = "^2.1.1"
+p-tqdm = "^1.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
