--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ openpyxl = "^3.1.2"
 numpy = "^1.26.0"
 pandas = "^2.1.1"
 p-tqdm = "^1.4.0"
+pynufft = "^2024.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
