--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = ">=3.10"
 tqdm = "^4.65.0"
 pingouin = "^0.5.3"
 openpyxl = "^3.1.2"
-numpy = "^1.26.0"
+numpy = "2.0.0"
 pandas = "^2.1.1"
 p-tqdm = "^1.4.0"
 
