--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ python = ">=3.10"
 tqdm = "^4.65.0"
 pingouin = "^0.5.3"
 openpyxl = "^3.1.2"
-numpy = "2.0.0"
 pandas = "^2.1.1"
 p-tqdm = "^1.4.0"
+typer = "^0.12.3"
 
 
 [tool.poetry.group.dev.dependencies]
