debug pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,5 +32,5 @@ include = ["mhealth_feature_generation"]
 [tool.black]
 line-length = 79
 
-[[tool.setuptools]
+[tool.setuptools]
 packages = ["mhealth_feature_generation"]
